game-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game-2048
        image: public.ecr.aws/kishorj/docker-2048:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048-v2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048-v2
  template:
    metadata:
      labels:
        app: game-2048-v2
    spec:
      containers:
      - name: game-2048-v2
        image: public.ecr.aws/kishorj/docker-2048:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048-v2-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: game-2048-v2
