php-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  selector:
    matchLabels:
      run: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m # Request 200 millicores (0.2 of a CPU core)
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
spec:
  ports:
  - port: 80
  selector:
    run: php-apache
  type: ClusterIP
