game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  annotations:
    # This annotation tells the controller which CIDRs can access the ALB.
    # 0.0.0.0/0 means "from anywhere on the internet".
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048-service
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            # Here v2 will not work as we dont have 2 separate images
            name: game-2048-v2-service
            port:
              number: 80
