deny-all-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-deny-all-ingress
spec:
  podSelector:
    matchLabels:
      app: my-server
  policyTypes:
  - Ingress
  ingress: [] # An empty ingress rule means no ingress traffic is allowed
